fix(test): keep Slice 5 integration test Java 17 compatible